Sema: Don't 'tuple splat' parameter lists with @autoclosure parameters

Fixes <https://bugs.swift.org/browse/SR-9991>.